--- a/MovieDirectory.html
+++ b/MovieDirectory.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+r><!DOCTYPE html>
 <head>
   <title>Movie list</title>
 </head>
@@ -63,21 +63,71 @@
     </tr>
 <br> 
 </table>
-  <h2> Comedy </h2>
-<a href="https://www.youtube.com/watch?v=rUAu2CBsMJc"> Da Possessed </a><br>
-<a href="https://www.youtube.com/watch?v=mwsIxDuIuhg"> Wanted Perfect Murder </a><br>
-<a href="https://www.youtube.com/watch?v=KiKc8MCxC4U"> Supahpapalicious </a><br>
-<a href="https://www.youtube.com/watch?v=snCfdf9t6mM"> The Amazing Praybeyt Benjamin </a><br>
-<a href="https://www.youtube.com/watch?v=8jX4uyylIIk"> Haba Baba Doo, Puti Puti Poo </a><br>
-<a href="https://www.youtube.com/watch?v=AeSoAgAutw4"> Bekikang </a><br>
-<a href="https://www.youtube.com/watch?v=-XwdQC1_Bd4"> Home Along Da Riles 2 </a><br>
-<a href="https://www.youtube.com/watch?v=Slj980tODww"> Bromance: My Brother’s Romance </a><br>
-<a href="https://www.youtube.com/watch?v=F7lbxUXimhg"> Isprikitik Walastik Kung Pumitik</a><br>
-<a href="https://www.youtube.com/watch?v=dDuS42Uf9SE"> Ang Tanging Pamilya </a>
+  <center><h2> Comedy </h2></center>
+  <table bgcolor="silver" align="right" border="3" cellpadding="10" width="100">
+    <tr>
+     <td align="center"> <img scr="https://assets.mubicdn.net/images/film/174448/image-w1280.jpg?1497399174" width="100" </td>
+     <td align="center"> Da Possessed </td>
+     <td align="center"> <a href="https://www.youtube.com/watch?v=rUAu2CBsMJc">Link 1 </a></td>
+    </tr>
+    <tr>
+      <td align="center"> <img scr="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSus3tOPb-PwFF5eft6CUXqZKvrggpsAn8aww&s" width="100"></td>
+      <td align="center">  Wanted Perfect Murder </td>
+      <td align="center"> <a href="https://www.youtube.com/watch?v=mwsIxDuIuhg">Link 2</a></td>
+    </tr>
+    <tr>
+      <td align="center"> <img scr="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTgsM7VZWV0tVGr9XVqPA6u2gsE00AP5HLl-A&s" width="100"></td>
+      <td align="center"> Supahpapalicious </td>
+      <td align="center"> <a href="https://www.youtube.com/watch?v=KiKc8MCxC4U">Link 3</a></td>
+    </tr>
+    <tr>
+      <td align="center"> <img scr="https://upload.wikimedia.org/wikipedia/en/6/6c/The_Amazing_Praybeyt_Benjamin_poster.jpg" width="100"></td>
+      <td align="center"> The Amazing Praybeyt Benjamin </td>      
+      <td align="center"> <a href="https://www.youtube.com/watch?v=snCfdf9t6mM">Link 4</a></td>
+    </tr>
+    <tr>
+      <td align="center"> <img scr="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQIxqy-VKx12qXFMhZ8koDCGcTZVPrKC7_vgg&s" width="100"></td>
+      <td align="center"> Haba Baba Doo, Puti Puti Poo</td>
+      <td align="center"> <a href="https://www.youtube.com/watch?v=8jX4uyylIIk">link 5</a></td>
+    </tr>
+    <tr>
+      <td align="center"> <img scr="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRNFX-c1o-lApUphfnw243eHukxqxkDlmultQ&s" width="100"></td>
+      <td align="center"> Bekikang</td>
+      <td align="center"> <a href="https://www.youtube.com/watch?v=AeSoAgAutw4">link 6</a></td>
+    </tr>
+    <tr>
+     <td align="center"> <img scr="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS6RDUVkyoldIpkad0MCdjEGMbO3vfwhT_G0A&s" width="100"></td>
+     <td align="center"> Home Along Da Riles 2 </td>
+     <td align="center"> <a href="https://www.youtube.com/watch?v=-XwdQC1_Bd4">link 7</a></td>    
+    </tr>
+    <tr>
+     <td align="center"> <img scr="https://upload.wikimedia.org/wikipedia/en/e/e7/Bromance_2013_Filipino_film.jpg" width="100"></td>
+     <td align="center"> Bromance: My Brother’s Romance </td>
+     <td align="center"> <a href="https://www.youtube.com/watch?v=Slj980tODww">Link 8</a></td>
+    </tr>
+    <tr>
+    <td align="center"> <img scr="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRZnRPm6kirKv-1JxqdWBhk3PD_yBvynr4jqg&s" width="100"></td>
+    <td align="center"> Isprikitik Walastik Kung Pumitik</td>
+    <td align="center"> <a href="https://www.youtube.com/watch?v=F7lbxUXimhg">Link 9</a></td>
+    </tr>
+    <tr>
+    <td align="center"> <img scr="https://upload.wikimedia.org/wikipedia/en/4/46/AngtangingpamilyaAMARRYGOROUND.jpg" width=100"</td>
+    <td align="center">  Ang Tanging Pamilya</td>
+    <td align="center"> <a href="https://www.youtube.com/watch?v=dDuS42Uf9SE">Link 10</a></td>
+    </tr>
 <br>
- <h2> Fantasy </h2><br>
-<a href="https://www.youtube.com/watch?v=neVNb1vm7fg"> GRIMM'S SNOW WHITE </a><br>
-<a href="https://www.youtube.com/watch?v=HqPp07TZcmk"> Monster Madness </a><br>
+ <center><h2> Fantasy </h2><br></center>
+<table bgcolor="silver" align="right" border="3" cellpadding="10" width="100">
+  <tr>
+    <td align="center"> <img scr="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQrz20TDG6l18JduF7vL1o208cu9pBAbkxeWw&s" width="100"</td>
+    <td align="center"> GRIMM'S SNOW WHITE</td>
+    <td align="center"> <a href="https://www.youtube.com/watch?v=neVNb1vm7fg">Link 1</a></td>
+  </tr>
+  <tr>
+   <td align="center"> <img scr="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSTT64lxTLASnkkcR759Kj3pXzqwFtuJntNHg&s" width="100"></td>
+   <td align="center"> Monster Madness</td>
+   <td align="center"> <a href="https://www.youtube.com/watch?v=HqPp07TZcmk">Link 2</a></td>
+  </tr>
 <a href="https://www.youtube.com/watch?v=neVNb1vm7fg"> GRIMM'S SNOW WHITE </a><br>
 <a href="https://www.youtube.com/watch?v=mKWfEmYYV9g"> ADVENTURES OF ALADDIN</a><br>
 <a href="https://www.youtube.com/watch?v=RNj2cH5yjNA0"> AVATAR </a><br>
