--- a/MovieDirectory.html
+++ b/MovieDirectory.html
@@ -66,52 +66,52 @@ r><!DOCTYPE html>
   <center><h2> Comedy </h2></center>
   <table bgcolor="silver" align="right" border="3" cellpadding="10" width="100">
     <tr>
-     <td align="center"> <img scr="https://assets.mubicdn.net/images/film/174448/image-w1280.jpg?1497399174" width="100" </td>
+     <td align="center"> <img src="https://assets.mubicdn.net/images/film/174448/image-w1280.jpg?1497399174" width="100" </td>
      <td align="center"> Da Possessed </td>
      <td align="center"> <a href="https://www.youtube.com/watch?v=rUAu2CBsMJc">Link 1 </a></td>
     </tr>
     <tr>
-      <td align="center"> <img scr="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSus3tOPb-PwFF5eft6CUXqZKvrggpsAn8aww&s" width="100"></td>
+      <td align="center"> <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSus3tOPb-PwFF5eft6CUXqZKvrggpsAn8aww&s" width="100"></td>
       <td align="center">  Wanted Perfect Murder </td>
       <td align="center"> <a href="https://www.youtube.com/watch?v=mwsIxDuIuhg">Link 2</a></td>
     </tr>
     <tr>
-      <td align="center"> <img scr="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTgsM7VZWV0tVGr9XVqPA6u2gsE00AP5HLl-A&s" width="100"></td>
+      <td align="center"> <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTgsM7VZWV0tVGr9XVqPA6u2gsE00AP5HLl-A&s" width="100"></td>
       <td align="center"> Supahpapalicious </td>
       <td align="center"> <a href="https://www.youtube.com/watch?v=KiKc8MCxC4U">Link 3</a></td>
     </tr>
     <tr>
-      <td align="center"> <img scr="https://upload.wikimedia.org/wikipedia/en/6/6c/The_Amazing_Praybeyt_Benjamin_poster.jpg" width="100"></td>
+      <td align="center"> <img src="https://upload.wikimedia.org/wikipedia/en/6/6c/The_Amazing_Praybeyt_Benjamin_poster.jpg" width="100"></td>
       <td align="center"> The Amazing Praybeyt Benjamin </td>      
       <td align="center"> <a href="https://www.youtube.com/watch?v=snCfdf9t6mM">Link 4</a></td>
     </tr>
     <tr>
-      <td align="center"> <img scr="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQIxqy-VKx12qXFMhZ8koDCGcTZVPrKC7_vgg&s" width="100"></td>
+      <td align="center"> <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQIxqy-VKx12qXFMhZ8koDCGcTZVPrKC7_vgg&s" width="100"></td>
       <td align="center"> Haba Baba Doo, Puti Puti Poo</td>
       <td align="center"> <a href="https://www.youtube.com/watch?v=8jX4uyylIIk">link 5</a></td>
     </tr>
     <tr>
-      <td align="center"> <img scr="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRNFX-c1o-lApUphfnw243eHukxqxkDlmultQ&s" width="100"></td>
+      <td align="center"> <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRNFX-c1o-lApUphfnw243eHukxqxkDlmultQ&s" width="100"></td>
       <td align="center"> Bekikang</td>
       <td align="center"> <a href="https://www.youtube.com/watch?v=AeSoAgAutw4">link 6</a></td>
     </tr>
     <tr>
-     <td align="center"> <img scr="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS6RDUVkyoldIpkad0MCdjEGMbO3vfwhT_G0A&s" width="100"></td>
+     <td align="center"> <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS6RDUVkyoldIpkad0MCdjEGMbO3vfwhT_G0A&s" width="100"></td>
      <td align="center"> Home Along Da Riles 2 </td>
      <td align="center"> <a href="https://www.youtube.com/watch?v=-XwdQC1_Bd4">link 7</a></td>    
     </tr>
     <tr>
-     <td align="center"> <img scr="https://upload.wikimedia.org/wikipedia/en/e/e7/Bromance_2013_Filipino_film.jpg" width="100"></td>
+     <td align="center"> <img src="https://upload.wikimedia.org/wikipedia/en/e/e7/Bromance_2013_Filipino_film.jpg" width="100"></td>
      <td align="center"> Bromance: My Brother’s Romance </td>
      <td align="center"> <a href="https://www.youtube.com/watch?v=Slj980tODww">Link 8</a></td>
     </tr>
     <tr>
-    <td align="center"> <img scr="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRZnRPm6kirKv-1JxqdWBhk3PD_yBvynr4jqg&s" width="100"></td>
+    <td align="center"> <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRZnRPm6kirKv-1JxqdWBhk3PD_yBvynr4jqg&s" width="100"></td>
     <td align="center"> Isprikitik Walastik Kung Pumitik</td>
     <td align="center"> <a href="https://www.youtube.com/watch?v=F7lbxUXimhg">Link 9</a></td>
     </tr>
     <tr>
-    <td align="center"> <img scr="https://upload.wikimedia.org/wikipedia/en/4/46/AngtangingpamilyaAMARRYGOROUND.jpg" width=100"</td>
+    <td align="center"> <img src="https://upload.wikimedia.org/wikipedia/en/4/46/AngtangingpamilyaAMARRYGOROUND.jpg" width=100"</td>
     <td align="center">  Ang Tanging Pamilya</td>
     <td align="center"> <a href="https://www.youtube.com/watch?v=dDuS42Uf9SE">Link 10</a></td>
     </tr>
@@ -119,34 +119,107 @@ r><!DOCTYPE html>
  <center><h2> Fantasy </h2><br></center>
 <table bgcolor="silver" align="right" border="3" cellpadding="10" width="100">
   <tr>
-    <td align="center"> <img scr="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQrz20TDG6l18JduF7vL1o208cu9pBAbkxeWw&s" width="100"</td>
+    <td align="center"> <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQrz20TDG6l18JduF7vL1o208cu9pBAbkxeWw&s" width="100"</td>
     <td align="center"> GRIMM'S SNOW WHITE</td>
     <td align="center"> <a href="https://www.youtube.com/watch?v=neVNb1vm7fg">Link 1</a></td>
   </tr>
   <tr>
-   <td align="center"> <img scr="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSTT64lxTLASnkkcR759Kj3pXzqwFtuJntNHg&s" width="100"></td>
+   <td align="center"> <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSTT64lxTLASnkkcR759Kj3pXzqwFtuJntNHg&s" width="100"></td>
    <td align="center"> Monster Madness</td>
    <td align="center"> <a href="https://www.youtube.com/watch?v=HqPp07TZcmk">Link 2</a></td>
   </tr>
-<a href="https://www.youtube.com/watch?v=neVNb1vm7fg"> GRIMM'S SNOW WHITE </a><br>
-<a href="https://www.youtube.com/watch?v=mKWfEmYYV9g"> ADVENTURES OF ALADDIN</a><br>
-<a href="https://www.youtube.com/watch?v=RNj2cH5yjNA0"> AVATAR </a><br>
-<a href="https://www.youtube.com/watch?v=jwErAY9QjMA"> Sisters Fight for Survival on a Dangerous Island</a><br>
-<a href="https://www.youtube.com/watch?v=vXs5GCqgJYk"> FIVE LEGEND</a><br>
-<a href="https://www.youtube.com/watch?v=ttIWmYaknCg"> MULTI SUB</a><br>
-<a href="https://www.youtube.com/watch?v=skADM1Y2c8Q"> The BFG 1989</a><br>
-<a href="https://www.youtube.com/watch?v=dmd7h5p2cp8"> The Tale of an Orphan Boy who Became the Jungle King</a><br>
-<br>
- <h2>Animation</h2>
- <a href="https://www.youtube.com/watch?v=LBnkUcgwR5k"> True Story</a><br>
- <a href="https://www.youtube.com/watch?v=QnJFQa-YTYQ"> New Animation </a><br>
- <a href="https://www.youtube.com/watch?v=GG82pFQW2FE">The Princess of Dragons </a><br>
- <a href="https://www.youtube.com/watch?v=M8E6vJHsz50"> The Good Dinosaur </a><br>
- <a href="https://www.youtube.com/watch?v=Srra6QdrMBI"> The smurfs</a><br>
- <a href="https://www.youtube.com/watch?v=28CIeC8cZks">  Bridge of Spirits </a><br>
- <a href="https://www.youtube.com/watch?v=UTAvGzCK6ok"> Valley Of The Lantern </a><br>
- <a href="https://www.youtube.com/watch?v=aQXR7RthBuc"> Cinderella </a><br>
- <a href="https://www.youtube.com/watch?v=NsD3_njh7D0"> Super Dumpling </a><br>
- <a href="https://www.youtube.com/watch?v=maJEodjvtws"> The Secret Garden</a><br>
+  <tr>
+  <td align="center"> <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQrz20TDG6l18JduF7vL1o208cu9pBAbkxeWw&s" width="100"></td>
+  <td align="center">  GRIMM'S SNOW WHITE </td>
+   <td align="center"> <a href="https://www.youtube.com/watch?v=neVNb1vm7fg">Link 3</a></td>
+  </tr>
+  <tr>
+    <td align="center"> <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQyzg9ORZPs9JF6-p0KfOFrzPycIU6vsy69jw&s" width="100"></td>
+    <td align="center"> ADVENTURES OF ALADDIN</td>
+    <td align="center"> <a href="https://www.youtube.com/watch?v=mKWfEmYYV9g">Link 4</a></td>
+  </tr>
+  <tr>
+    <td align="center"> <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQOdpzg8SQCjHVGORRl8lEH6j_OueD-3M3H-A&s" width="100"></td>
+    <td align="center"> AVATAR</td>
+    <td align="center"> <a href="https://www.youtube.com/watch?v=RNj2cH5yjNA0"> Link 5</a></td>
+  </tr>
+  <tr> 
+  <td align="center"> <img src="https://i.ytimg.com/vi/jwErAY9QjMA/maxresdefault.jpg" width="100"></td>
+  <td align="center"> Sisters Fight for Survival on a Dangerous Island</td>
+  <td align="center"> <a href="https://www.youtube.com/watch?v=jwErAY9QjMA"> Link 6</a></td>
+  </tr>
+  <tr>
+   <td align="center"> <img src="https://i.ytimg.com/vi/vXs5GCqgJYk/sddefault.jpg" width="100"></td>
+   <td align="center"> FIVE LEGEND</td>
+   <td align="center"> <a https://www.youtube.com/watch?v=vXs5GCqgJYk"> link 7</a></td>
+  </tr>
+  <tr>
+   <td align="center"> <img src="https://i.ytimg.com/vi/Z_B4QdzmjPE/hq720.jpg?sqp=-oaymwEXCK4FEIIDSFryq4qpAwkIARUAAIhCGAE=&rs=AOn4CLCJVRssSkWLQHdNu-BXJlC_JcL49Q" width="100"></td>
+   <td align="center">  MULTI SUB</td>
+   <td align="center"> <a href="https://www.youtube.com/watch?v=ttIWmYaknCg"> Link 8</a></td>
+    </tr>
+<tr>
+  <td align="center"> <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQonaXBuF0MxUYVW4uOuuwuSS__5VsrFUIbeQ&s" width="100"></td>
+  <td align="center"> The BFG 1989</td>
+  <td align="center"> <a href="https://www.youtube.com/watch?v=skADM1Y2c8Q"> Link 9</a></td>
+</tr>
+  <tr>
+  <td align="center"> <img src="https://i.ytimg.com/vi/dmd7h5p2cp8/sddefault.jpg" width="100"></td>
+  <td align="center"> The Tale of an Orphan Boy who Became the Jungle King</td>
+  <td align="center"> <a href="https://www.youtube.com/watch?v=dmd7h5p2cp8"> Link 10</a></td>
+  </tr>
+<center><h2>Animation</h2></center>
+<table bgcolor="silver" align="right" border="3" cellpadding="10" width="100">
+ <tr>
+    <td align="center"> <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcREp7pFu-9gjmXqL1X15eLxIvfDxXjbJfewlg&s" width="100"></td>
+    <td align="center"> True Story</td>
+    <td align="center"> <a href="https://www.youtube.com/watch?v=LBnkUcgwR5k"> Link 1</a></td>
+ </tr>
+  <tr>
+  <td align="center"> <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQcIB3Y7uK1Dp77zSObqT3PbMKfrY8VCFkS3A&s" width="100"></td>
+  <td align="center"> New Animation</td>
+  <td align="center"> <a href="https://www.youtube.com/watch?v=QnJFQa-YTYQ"> Link 2</a></td>
+  </tr>
+  <tr>
+  <td align="center"> <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSTUrYVldFKakvlqVsi6-_kN9DWLmiTarv5XA&s" width="100"></td>
+  <td align="center"> The Princess of Dragons</td>
+  <td align="center"> <a href="https://www.youtube.com/watch?v=GG82pFQW2FE">Link 3</a></td>
+  </tr>
+  <tr>
+  <td align="center"> <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRYf_jJgg1mvH6AC8TB4qCmvVrkYk4BlNAZ7A&s" width="100"></td>
+  <td align="center"> The Good Dinosaur</td>
+  <td align="center"> <a href="https://www.youtube.com/watch?v=M8E6vJHsz50">Link 4</a></td>
+  </tr>
+  <tr>
+    <td align="center"> <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRKk7oUWgjL6Epdx0Rx1ASxc3T3LoWRAD9sLw&s" width="100"></td>
+    <td align="center"> The smurfs</td>
+    <td align="center"> <a href="https://www.youtube.com/watch?v=Srra6QdrMBI">Link 5</a></td>
+  </tr>
+  <tr>
+    <td align="center"> <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQx4l3BeyIyw88LrRIS_ArWjb3fECMjsap4pA&s" width="100"></td>
+    <td align="center">  Bridge of Spirits</td>
+    <td align="center"> <a href="https://www.youtube.com/watch?v=28CIeC8cZks"> Link 6</a></td>
+  </tr>
+  <tr>
+     <td align="center"> <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQAdTzTAmoNLSn3e0OYCP2B3seHp6ajMNxk8A&s" width="100"></td>
+     <td align="center"> Valley Of The Lantern </td>
+     <td align="center"> <a href="https://www.youtube.com/watch?v=UTAvGzCK6ok">Link 7</a></td>
+  </tr>
+  <tr>
+    <td align="center"> <img src="https://lumiere-a.akamaihd.net/v1/images/p_cinderella_20490_a7c83808.jpeg" width="100"></td>
+    <td align="center"> Cinderella </td>
+    <td align="center"> <a href="https://www.youtube.com/watch?v=aQXR7RthBuc">Link 8</a></td>
+  </tr>
+  <tr>
+     <td align="center"> <img src="https://i.ytimg.com/vi/NsD3_njh7D0/hq720.jpg?sqp=-oaymwEhCK4FEIIDSFryq4qpAxMIARUAAAAAGAElAADIQj0AgKJD&rs=AOn4CLAsvJ7hxf1fZuNBnkd2F5CT83UNKQ" width="100"></td>
+     <td align="center"> super dumpling</td>/
+     <td align="center"> <a href="https://www.youtube.com/watch?v=NsD3_njh7D0"> Link 9</a></td>
+  </tr>
+  <tr>
+    <td align="center"> <img src="https://cdn.kobo.com/book-images/e5ef6d48-9e6d-474d-be35-57926fee6e89/1200/1200/False/the-secret-garden-illustrated-edition.jpg" width="100"></td>
+    <td align="center">  The Secret Garden</td>
+    <td align="center"> <a href="https://www.youtube.com/watch?v=maJEodjvtws">link 10</a></td>
+    
+  </tr>
 </body>
 </html>
