--- a/MovieDirectory.html
+++ b/MovieDirectory.html
@@ -4,13 +4,13 @@ r><!DOCTYPE html>
 </head>
 <body>
   <h1> Movie List </h1>
-<a href="yonson_activity3_aboutme.html" title="Go to Home" target="_blank"> Home </a> |
-<a href="movielist.html" title="Go to Movie List" target="_blank"> Movie List </a> |
+<a href="yonson_activity3_aboutme.html" title="Go to Home" target="_blank"> Home </a> 
+<a href="movielist.html" title="Go to Movie List" target="_blank"> Movie List </a> 
 <a href="contact.html" title="Go to Contact" target="_blank"> Contact </a>
 
   <center><h1> <mark> Movie directory </mark></h1></center>
   <center><h2> Horror </h2></center>
-  <table bgcolor="silver" align="right" border="3" cellpadding="10" width="100%">
+  <table bgcolor="silver" align="right" border="5" width="50%">
     <tr>
       <th>Movie Poster</th>
       <th>Movie Title</th>
