--- a/MovieDirectory.html
+++ b/MovieDirectory.html
@@ -61,7 +61,6 @@ r><!DOCTYPE html>
       <td align="center"> Scarecrow's Revenge </td>
       <td align="center"> <a href="https://www.youtube.com/watch?v=S097Ib2AIyo"> Link9 </a></td>
     </tr>
-<br> 
 </table>
   <center><h2> Comedy </h2></center>
   <table bgcolor="silver" align="right" border="3" cellpadding="10" width="100">
@@ -115,7 +114,7 @@ r><!DOCTYPE html>
     <td align="center">  Ang Tanging Pamilya</td>
     <td align="center"> <a href="https://www.youtube.com/watch?v=dDuS42Uf9SE">Link 10</a></td>
     </tr>
-<br>
+  </table>
  <center><h2> Fantasy </h2><br></center>
 <table bgcolor="silver" align="right" border="3" cellpadding="10" width="100">
   <tr>
@@ -168,6 +167,7 @@ r><!DOCTYPE html>
   <td align="center"> The Tale of an Orphan Boy who Became the Jungle King</td>
   <td align="center"> <a href="https://www.youtube.com/watch?v=dmd7h5p2cp8"> Link 10</a></td>
   </tr>
+</table>
 <center><h2>Animation</h2></center>
 <table bgcolor="silver" align="right" border="3" cellpadding="10" width="100">
  <tr>
@@ -219,7 +219,7 @@ r><!DOCTYPE html>
     <td align="center"> <img src="https://cdn.kobo.com/book-images/e5ef6d48-9e6d-474d-be35-57926fee6e89/1200/1200/False/the-secret-garden-illustrated-edition.jpg" width="100"></td>
     <td align="center">  The Secret Garden</td>
     <td align="center"> <a href="https://www.youtube.com/watch?v=maJEodjvtws">link 10</a></td>
-    
+</table>
   </tr>
 </body>
 </html>
