--- a/MovieDirectory.html
+++ b/MovieDirectory.html
@@ -1,4 +1,5 @@
-r><!DOCTYPE html>
+<!DOCTYPE html>
+<html>
 <head>
   <title>Movie list</title>
 </head>
@@ -10,7 +11,7 @@ r><!DOCTYPE html>
 
   <center><h1> <mark> Movie directory </mark></h1></center>
   <center><h2> Horror </h2></center>
-  <table bgcolor="silver" align="right" border="5" width="50%">
+  <table bgcolor="silver" align="center" border="5" width="60%">
     <tr>
       <th>Movie Poster</th>
       <th>Movie Title</th>
@@ -63,7 +64,7 @@ r><!DOCTYPE html>
     </tr>
 </table>
   <center><h2> Comedy </h2></center>
-  <table bgcolor="silver" align="right" border="3" cellpadding="10" width="100">
+  <table bgcolor="silver" align="center" border="5"  width="60%">
     <tr>
      <td align="center"> <img src="https://assets.mubicdn.net/images/film/174448/image-w1280.jpg?1497399174" width="100" </td>
      <td align="center"> Da Possessed </td>
@@ -116,7 +117,7 @@ r><!DOCTYPE html>
     </tr>
   </table>
  <center><h2> Fantasy </h2><br></center>
-<table bgcolor="silver" align="right" border="3" cellpadding="10" width="100">
+<table bgcolor="silver" align="center" border="5"  width="60%">
   <tr>
     <td align="center"> <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQrz20TDG6l18JduF7vL1o208cu9pBAbkxeWw&s" width="100"</td>
     <td align="center"> GRIMM'S SNOW WHITE</td>
@@ -169,7 +170,7 @@ r><!DOCTYPE html>
   </tr>
 </table>
 <center><h2>Animation</h2></center>
-<table bgcolor="silver" align="right" border="3" cellpadding="10" width="100">
+<table bgcolor="silver" align="center" border="5" width="60%">
  <tr>
     <td align="center"> <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcREp7pFu-9gjmXqL1X15eLxIvfDxXjbJfewlg&s" width="100"></td>
     <td align="center"> True Story</td>
