--- a/MovieDirectory.html
+++ b/MovieDirectory.html
@@ -20,42 +20,42 @@
     <tr>
     <td align="center"> <img src="https://i.ytimg.com/vi/QPJjWFglM3w/maxresdefault.jpg" width="100"></td>
     <td align="center"> This Little Girl Was Born Bad </td>
-    <td align="center"> <a href="https://www.youtube.com/watch?v=QPJjWFglM3w">link1</td> 
+    <td> <a href="https://www.youtube.com/watch?v=QPJjWFglM3w">link1</a></td> 
     </tr>
     <tr> 
       <td align="center"> <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTp8GzYRE2PIqcLUwbrPZbIPv90wMK3mYlm4g&s" width="100"></td>
       <td align="center"> Maria Leonora Teresa </td>
-      <td align="center"> <a href="https://www.youtube.com/watch?v=CQX6e1L0KRw"> Link2 </a>
+      <td> <a href="https://www.youtube.com/watch?v=CQX6e1L0KRw"> Link2</a></td>
     </tr>
     <tr>
       <td align="center"> <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSZ5i11C2eMpzUMjYM4qnwDpiFfoe8awE0Adw&s" width="100"> </td>
       <td align="center"> SPIRIT OF THE GLASS 2 </td>
-      <td align="center"> <a href="https://www.youtube.com/watch?v=34lzzKFWacI"> Link3 </a></td>
+      <td> <a href="https://www.youtube.com/watch?v=34lzzKFWacI"> Link3 </a></td>
     </tr>
     <tr>
        <td align="center"> <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSWtJ3HK4knwhh438UEhn0ql3sl4n31Ir-Vrg&s" width="100"> </td>
        <td align="center"> Terrifier </td>
-       <td align="center"> <a href="https://www.youtube.com/watch?v=2Yxanyc2QO8"> Link4 </a></td>
+       <td> <a href="https://www.youtube.com/watch?v=2Yxanyc2QO8"> Link4 </a></td>
     </tr>
     <tr>
        <td align="center"> <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRVhrCzkDhhHlgEDa0KNPJHTtTkh9MFIUaYXQ&s" width="100"></td>
        <td align="center"> THE WRONG HOUSE </td>
-       <td align="center"> <a href="https://www.youtube.com/watch?v=XimvdthKNas"> Link5 </a>
+       <td> <a href="https://www.youtube.com/watch?v=XimvdthKNas"> Link5 </a></td>
     </tr>
     <tr>
       <td align="center"> <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSj6-8t9tjnH_mLNw1EnqFlAnhtguxa5Q9c6Q&s" width="100"> </td>
       <td align="center"> Charlotte </td>
-      <td align="center"> <a href="https://www.youtube.com/watch?v=G8ngi-HhojM"> Link6 </a></td>
+      <td> <a href="https://www.youtube.com/watch?v=G8ngi-HhojM"> Link6 </a></td>
     </tr>
     <tr>
       <td align="center"> <img src="https://i.ytimg.com/vi/rGsXo6cjKyE/hq720.jpg?sqp=-oaymwEhCK4FEIIDSFryq4qpAxMIARUAAAAAGAElAADIQj0AgKJD&rs=AOn4CLAFy3CXfSI1YGG3fzPX54z7Wx25bw" width="100"> </td>
       <td align="center"> House of Dead </td>
-      <td align="center"> <a href="https://www.youtube.com/watch?v=rGsXo6cjKyE"> Link7 </a></td>
+      <td> <a href="https://www.youtube.com/watch?v=rGsXo6cjKyE"> Link7 </a></td>
      </tr>
      <tr>
        <td align="center"> <img src="https://i.ytimg.com/vi/kV61qitjxE4/hq720.jpg?sqp=-oaymwEhCK4FEIIDSFryq4qpAxMIARUAAAAAGAElAADIQj0AgKJD&rs=AOn4CLBfNUpckF7f_3hDJPxP9WzvZ-i7Aw" width="100"></td>
        <td align="center"> ITS HERE </td>
-       <td align="center"> <a href="https://www.youtube.com/watch?v=kV61qitjxE4"> Link8 </a></td>
+       <td> <a href="https://www.youtube.com/watch?v=kV61qitjxE4"> Link8 </a></td>
     </tr>
     <tr>
       <td align="center"> <img src="https://upload.wikimedia.org/wikipedia/en/4/49/DVD_cover_of_the_2002_movie_Scarecrow.jpg" width="100"> </td>
@@ -68,52 +68,52 @@
     <tr>
      <td align="center"> <img src="https://assets.mubicdn.net/images/film/174448/image-w1280.jpg?1497399174" width="100" </td>
      <td align="center"> Da Possessed </td>
-     <td align="center"> <a href="https://www.youtube.com/watch?v=rUAu2CBsMJc">Link 1 </a></td>
+     <td> <a href="https://www.youtube.com/watch?v=rUAu2CBsMJc">Link 1 </a></td>
     </tr>
     <tr>
       <td align="center"> <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSus3tOPb-PwFF5eft6CUXqZKvrggpsAn8aww&s" width="100"></td>
       <td align="center">  Wanted Perfect Murder </td>
-      <td align="center"> <a href="https://www.youtube.com/watch?v=mwsIxDuIuhg">Link 2</a></td>
+      <td> <a href="https://www.youtube.com/watch?v=mwsIxDuIuhg">Link 2</a></td>
     </tr>
     <tr>
       <td align="center"> <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTgsM7VZWV0tVGr9XVqPA6u2gsE00AP5HLl-A&s" width="100"></td>
       <td align="center"> Supahpapalicious </td>
-      <td align="center"> <a href="https://www.youtube.com/watch?v=KiKc8MCxC4U">Link 3</a></td>
+      <td> <a href="https://www.youtube.com/watch?v=KiKc8MCxC4U">Link 3</a></td>
     </tr>
     <tr>
       <td align="center"> <img src="https://upload.wikimedia.org/wikipedia/en/6/6c/The_Amazing_Praybeyt_Benjamin_poster.jpg" width="100"></td>
       <td align="center"> The Amazing Praybeyt Benjamin </td>      
-      <td align="center"> <a href="https://www.youtube.com/watch?v=snCfdf9t6mM">Link 4</a></td>
+      <td> <a href="https://www.youtube.com/watch?v=snCfdf9t6mM">Link 4</a></td>
     </tr>
     <tr>
       <td align="center"> <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQIxqy-VKx12qXFMhZ8koDCGcTZVPrKC7_vgg&s" width="100"></td>
       <td align="center"> Haba Baba Doo, Puti Puti Poo</td>
-      <td align="center"> <a href="https://www.youtube.com/watch?v=8jX4uyylIIk">link 5</a></td>
+      <td> <a href="https://www.youtube.com/watch?v=8jX4uyylIIk">link 5</a></td>
     </tr>
     <tr>
       <td align="center"> <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRNFX-c1o-lApUphfnw243eHukxqxkDlmultQ&s" width="100"></td>
       <td align="center"> Bekikang</td>
-      <td align="center"> <a href="https://www.youtube.com/watch?v=AeSoAgAutw4">link 6</a></td>
+      <td> <a href="https://www.youtube.com/watch?v=AeSoAgAutw4">link 6</a></td>
     </tr>
     <tr>
      <td align="center"> <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS6RDUVkyoldIpkad0MCdjEGMbO3vfwhT_G0A&s" width="100"></td>
      <td align="center"> Home Along Da Riles 2 </td>
-     <td align="center"> <a href="https://www.youtube.com/watch?v=-XwdQC1_Bd4">link 7</a></td>    
+     <td> <a href="https://www.youtube.com/watch?v=-XwdQC1_Bd4">link 7</a></td>    
     </tr>
     <tr>
      <td align="center"> <img src="https://upload.wikimedia.org/wikipedia/en/e/e7/Bromance_2013_Filipino_film.jpg" width="100"></td>
      <td align="center"> Bromance: My Brother’s Romance </td>
-     <td align="center"> <a href="https://www.youtube.com/watch?v=Slj980tODww">Link 8</a></td>
+     <td> <a href="https://www.youtube.com/watch?v=Slj980tODww">Link 8</a></td>
     </tr>
     <tr>
     <td align="center"> <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRZnRPm6kirKv-1JxqdWBhk3PD_yBvynr4jqg&s" width="100"></td>
     <td align="center"> Isprikitik Walastik Kung Pumitik</td>
-    <td align="center"> <a href="https://www.youtube.com/watch?v=F7lbxUXimhg">Link 9</a></td>
+    <td> <a href="https://www.youtube.com/watch?v=F7lbxUXimhg">Link 9</a></td>
     </tr>
     <tr>
     <td align="center"> <img src="https://upload.wikimedia.org/wikipedia/en/4/46/AngtangingpamilyaAMARRYGOROUND.jpg" width=100"</td>
     <td align="center">  Ang Tanging Pamilya</td>
-    <td align="center"> <a href="https://www.youtube.com/watch?v=dDuS42Uf9SE">Link 10</a></td>
+    <td> <a href="https://www.youtube.com/watch?v=dDuS42Uf9SE">Link 10</a></td>
     </tr>
   </table>
  <center><h2> Fantasy </h2><br></center>
@@ -121,52 +121,52 @@
   <tr>
     <td align="center"> <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQrz20TDG6l18JduF7vL1o208cu9pBAbkxeWw&s" width="100"</td>
     <td align="center"> GRIMM'S SNOW WHITE</td>
-    <td align="center"> <a href="https://www.youtube.com/watch?v=neVNb1vm7fg">Link 1</a></td>
+    <td> <a href="https://www.youtube.com/watch?v=neVNb1vm7fg">Link 1</a></td>
   </tr>
   <tr>
    <td align="center"> <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSTT64lxTLASnkkcR759Kj3pXzqwFtuJntNHg&s" width="100"></td>
    <td align="center"> Monster Madness</td>
-   <td align="center"> <a href="https://www.youtube.com/watch?v=HqPp07TZcmk">Link 2</a></td>
+   <td> <a href="https://www.youtube.com/watch?v=HqPp07TZcmk">Link 2</a></td>
   </tr>
   <tr>
   <td align="center"> <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQrz20TDG6l18JduF7vL1o208cu9pBAbkxeWw&s" width="100"></td>
   <td align="center">  GRIMM'S SNOW WHITE </td>
-   <td align="center"> <a href="https://www.youtube.com/watch?v=neVNb1vm7fg">Link 3</a></td>
+   <td> <a href="https://www.youtube.com/watch?v=neVNb1vm7fg">Link 3</a></td>
   </tr>
   <tr>
     <td align="center"> <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQyzg9ORZPs9JF6-p0KfOFrzPycIU6vsy69jw&s" width="100"></td>
     <td align="center"> ADVENTURES OF ALADDIN</td>
-    <td align="center"> <a href="https://www.youtube.com/watch?v=mKWfEmYYV9g">Link 4</a></td>
+    <td> <a href="https://www.youtube.com/watch?v=mKWfEmYYV9g">Link 4</a></td>
   </tr>
   <tr>
     <td align="center"> <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQOdpzg8SQCjHVGORRl8lEH6j_OueD-3M3H-A&s" width="100"></td>
     <td align="center"> AVATAR</td>
-    <td align="center"> <a href="https://www.youtube.com/watch?v=RNj2cH5yjNA0"> Link 5</a></td>
+    <td> <a href="https://www.youtube.com/watch?v=RNj2cH5yjNA0"> Link 5</a></td>
   </tr>
   <tr> 
   <td align="center"> <img src="https://i.ytimg.com/vi/jwErAY9QjMA/maxresdefault.jpg" width="100"></td>
   <td align="center"> Sisters Fight for Survival on a Dangerous Island</td>
-  <td align="center"> <a href="https://www.youtube.com/watch?v=jwErAY9QjMA"> Link 6</a></td>
+  <td> <a href="https://www.youtube.com/watch?v=jwErAY9QjMA"> Link 6</a></td>
   </tr>
   <tr>
    <td align="center"> <img src="https://i.ytimg.com/vi/vXs5GCqgJYk/sddefault.jpg" width="100"></td>
    <td align="center"> FIVE LEGEND</td>
-   <td align="center"> <a https://www.youtube.com/watch?v=vXs5GCqgJYk"> link 7</a></td>
+   <td> <a https://www.youtube.com/watch?v=vXs5GCqgJYk"> link 7</a></td>
   </tr>
   <tr>
    <td align="center"> <img src="https://i.ytimg.com/vi/Z_B4QdzmjPE/hq720.jpg?sqp=-oaymwEXCK4FEIIDSFryq4qpAwkIARUAAIhCGAE=&rs=AOn4CLCJVRssSkWLQHdNu-BXJlC_JcL49Q" width="100"></td>
    <td align="center">  MULTI SUB</td>
-   <td align="center"> <a href="https://www.youtube.com/watch?v=ttIWmYaknCg"> Link 8</a></td>
+   <td> <a href="https://www.youtube.com/watch?v=ttIWmYaknCg"> Link 8</a></td>
     </tr>
 <tr>
   <td align="center"> <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQonaXBuF0MxUYVW4uOuuwuSS__5VsrFUIbeQ&s" width="100"></td>
   <td align="center"> The BFG 1989</td>
-  <td align="center"> <a href="https://www.youtube.com/watch?v=skADM1Y2c8Q"> Link 9</a></td>
+  <td> <a href="https://www.youtube.com/watch?v=skADM1Y2c8Q"> Link 9</a></td>
 </tr>
   <tr>
   <td align="center"> <img src="https://i.ytimg.com/vi/dmd7h5p2cp8/sddefault.jpg" width="100"></td>
   <td align="center"> The Tale of an Orphan Boy who Became the Jungle King</td>
-  <td align="center"> <a href="https://www.youtube.com/watch?v=dmd7h5p2cp8"> Link 10</a></td>
+  <td> <a href="https://www.youtube.com/watch?v=dmd7h5p2cp8"> Link 10</a></td>
   </tr>
 </table>
 <center><h2>Animation</h2></center>
@@ -174,52 +174,52 @@
  <tr>
     <td align="center"> <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcREp7pFu-9gjmXqL1X15eLxIvfDxXjbJfewlg&s" width="100"></td>
     <td align="center"> True Story</td>
-    <td align="center"> <a href="https://www.youtube.com/watch?v=LBnkUcgwR5k"> Link 1</a></td>
+    <td> <a href="https://www.youtube.com/watch?v=LBnkUcgwR5k"> Link 1</a></td>
  </tr>
   <tr>
   <td align="center"> <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQcIB3Y7uK1Dp77zSObqT3PbMKfrY8VCFkS3A&s" width="100"></td>
   <td align="center"> New Animation</td>
-  <td align="center"> <a href="https://www.youtube.com/watch?v=QnJFQa-YTYQ"> Link 2</a></td>
+  <td> <a href="https://www.youtube.com/watch?v=QnJFQa-YTYQ"> Link 2</a></td>
   </tr>
   <tr>
   <td align="center"> <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSTUrYVldFKakvlqVsi6-_kN9DWLmiTarv5XA&s" width="100"></td>
   <td align="center"> The Princess of Dragons</td>
-  <td align="center"> <a href="https://www.youtube.com/watch?v=GG82pFQW2FE">Link 3</a></td>
+  <td> <a href="https://www.youtube.com/watch?v=GG82pFQW2FE">Link 3</a></td>
   </tr>
   <tr>
   <td align="center"> <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRYf_jJgg1mvH6AC8TB4qCmvVrkYk4BlNAZ7A&s" width="100"></td>
   <td align="center"> The Good Dinosaur</td>
-  <td align="center"> <a href="https://www.youtube.com/watch?v=M8E6vJHsz50">Link 4</a></td>
+  <td> <a href="https://www.youtube.com/watch?v=M8E6vJHsz50">Link 4</a></td>
   </tr>
   <tr>
     <td align="center"> <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRKk7oUWgjL6Epdx0Rx1ASxc3T3LoWRAD9sLw&s" width="100"></td>
     <td align="center"> The smurfs</td>
-    <td align="center"> <a href="https://www.youtube.com/watch?v=Srra6QdrMBI">Link 5</a></td>
+    <td> <a href="https://www.youtube.com/watch?v=Srra6QdrMBI">Link 5</a></td>
   </tr>
   <tr>
     <td align="center"> <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQx4l3BeyIyw88LrRIS_ArWjb3fECMjsap4pA&s" width="100"></td>
     <td align="center">  Bridge of Spirits</td>
-    <td align="center"> <a href="https://www.youtube.com/watch?v=28CIeC8cZks"> Link 6</a></td>
+    <td> <a href="https://www.youtube.com/watch?v=28CIeC8cZks"> Link 6</a></td>
   </tr>
   <tr>
      <td align="center"> <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQAdTzTAmoNLSn3e0OYCP2B3seHp6ajMNxk8A&s" width="100"></td>
      <td align="center"> Valley Of The Lantern </td>
-     <td align="center"> <a href="https://www.youtube.com/watch?v=UTAvGzCK6ok">Link 7</a></td>
+     <td> <a href="https://www.youtube.com/watch?v=UTAvGzCK6ok">Link 7</a></td>
   </tr>
   <tr>
     <td align="center"> <img src="https://lumiere-a.akamaihd.net/v1/images/p_cinderella_20490_a7c83808.jpeg" width="100"></td>
     <td align="center"> Cinderella </td>
-    <td align="center"> <a href="https://www.youtube.com/watch?v=aQXR7RthBuc">Link 8</a></td>
+    <td> <a href="https://www.youtube.com/watch?v=aQXR7RthBuc">Link 8</a></td>
   </tr>
   <tr>
      <td align="center"> <img src="https://i.ytimg.com/vi/NsD3_njh7D0/hq720.jpg?sqp=-oaymwEhCK4FEIIDSFryq4qpAxMIARUAAAAAGAElAADIQj0AgKJD&rs=AOn4CLAsvJ7hxf1fZuNBnkd2F5CT83UNKQ" width="100"></td>
      <td align="center"> super dumpling</td>/
-     <td align="center"> <a href="https://www.youtube.com/watch?v=NsD3_njh7D0"> Link 9</a></td>
+     <td> <a href="https://www.youtube.com/watch?v=NsD3_njh7D0"> Link 9</a></td>
   </tr>
   <tr>
     <td align="center"> <img src="https://cdn.kobo.com/book-images/e5ef6d48-9e6d-474d-be35-57926fee6e89/1200/1200/False/the-secret-garden-illustrated-edition.jpg" width="100"></td>
     <td align="center">  The Secret Garden</td>
-    <td align="center"> <a href="https://www.youtube.com/watch?v=maJEodjvtws">link 10</a></td>
+    <td> <a href="https://www.youtube.com/watch?v=maJEodjvtws">link 10</a></td>
 </table>
   </tr>
 </body>
